--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -1,5 +1,7 @@
 @import "../../../mixin.less";
-
+.theme--light .btn.btn--disabled:not(.btn--icon):not(.btn--flat){
+    background-color:#bbbbbb!important;
+}
 .answer-question{
     .limited-width();
     @media(max-width: @screen-sm){
@@ -44,13 +46,16 @@
         border-top: 0px !important;
         margin: 0;
         height: 52px;
-        border-radius: 4px;
-        font-size: 19px;
-        font-weight: bold;
+        border-radius: 0 0 4px 4px;
+        font-size: 18px;
         text-transform: none;
         &.primary {
             background-color: #3532d5 !important;
           }
+        &:disabled{
+            background-color: #bbbbbb!important;
+            color: white!important;
+        }
     }
 
     .tab-padding{padding:8px; margin-bottom: 40px;}
