fix shlomi design comments
disable in question and answer look the same

--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -1,6 +1,6 @@
 @import "../../../mixin.less";
 .theme--light .btn.btn--disabled:not(.btn--icon):not(.btn--flat){
-    background-color:#bbbbbb!important;
+    background-color: rgba(0,0,0,0.12) !important;
 }
 .answer-question{
     .limited-width();
