--- a/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/SortAndFilter.less
@@ -228,6 +228,9 @@
                     border-right: 0;
                     max-height: 250px;
                     overflow-y: scroll;
+                    &.no-maxHeight{
+                        max-height:inherit;
+                    }
                 }
             }
         }
