--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -60,7 +60,7 @@
 
     .result-cell {
         border-radius: 4px;
-        overflow: hidden;
+        //overflow: hidden;
         position: relative;
         width: 100%;
         max-width: @cellWidth;
