--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -18,11 +18,11 @@
     height: 41px;
     width: 105px;
     overflow: hidden;
-    border-radius: 0 0 36px;
+    border-radius:4px 0 36px;
     background-color: #f0f0f0;
     border: solid 0.5px #dddddd;
     border-top: 0;
-    border-left: 0;
+    //border-left: 0;
     font-size: 18px;
 
     color: #47586a;
