--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -22,7 +22,7 @@
     background-color: #f0f0f0;
     border: solid 0.5px #dddddd;
     border-top: 0;
-    //border-left: 0;
+    border-left: 0;
     font-size: 18px;
 
     color: #47586a;
