--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -118,6 +118,7 @@
     padding: 10px;
     font-size: 14px;
     -webkit-appearance: menulist;
+    font-weight: bold;
 
     @media (max-width: @screen-xs) { padding: 9px; }
   }
