--- a/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
+++ b/Cloudents.Web/ClientApp/components/results/helpers/faq-block/faq-block.less
@@ -19,11 +19,11 @@
         width: 100%;
         line-height: 40px;
         display: block;
-        text-align: center;      
+        text-align: center;
+        margin-bottom: 17px;
     }
 
     .card-block{
-        margin-top: 17px;
         width: 100%;
         background-color: #ffffff;
         box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
