Fixed the toaster to be in header

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -398,3 +398,26 @@
     opacity: 0;
   }
 }
+.snack__content {
+  margin-top: 48px;
+  width: 616px;
+  height: 48px;
+  background-color: #3293f6;
+  font-size: 16px;
+  line-height: 1.35;
+  letter-spacing: -0.4px;
+  color: #ffffff;
+  .undo-btn{
+    text-decoration: underline;
+    margin-left: 42px;
+  }
+  .close-btn{
+    font-size: 0;
+    padding: 10px;
+    margin-right: -10px;
+    i{
+      color: @color-white;
+      font-size: 14px;
+    }
+  }
+}
