--- a/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/extended-text-area/extendedTextArea.less
@@ -199,7 +199,7 @@ ul.actions_text {
     padding: 3px 0;
 
     button, label {
-      background-color: #d8d8d8;
+      //background-color: #d8d8d8;
       width: 25px;
       height: 25px;
       border-radius: 5px;
