--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -1,7 +1,6 @@
 @import "../../mixin.less";
 
-.registration {
-  .dialog {
+  .registration-dialog {
     text-align: center;
     .card {
       display: flex;
@@ -86,6 +85,7 @@
     }
 
   }
+.registration {
   .step-title {
     text-align: center;
     font-size: 26px;
