case #10300- remove border ans add hover button

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -84,7 +84,7 @@
         }
 
         .cell-video,
-        &:not(:hover) .cell{
+       .cell{
             border-color: #fff !important;
         }
 
