more ui chjanges in registration

--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -74,6 +74,9 @@
       color: #ffffff;
       width: 100%;
       height: @registrationFieldHeight;
+      @media (max-width: @screen-xs) {
+        width: 86%;
+      }
       margin-top: 28px;
     }
 
