--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -11,7 +11,7 @@
     position: relative;
 
   p {
-    margin: 16px 19px 16px 16px;
+    margin: 16px 44px 16px 16px;
   }
 
   .q-price {
@@ -114,12 +114,8 @@
   }
 
   .q-text {
-    @media (max-width: @screen-xs) {
-      font-size: 16px;
-    }
-    font-size: 20px;
-    line-height: 1.35;
-    letter-spacing: -0.4px;
+    line-height: 1.75;
+    letter-spacing: -0.3px;
     text-align: left;
     color: #4a4a4a;
   }
@@ -170,6 +166,7 @@
     justify-content: space-between;
     padding: 0px 16px 15px 16px;
     line-height: 32px;
+    min-height: 49px;
     align-items: flex-end;
 
     .new-block {
