--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -1,193 +1,272 @@
 @import "../../mixin.less";
 
-.wallet-page{
-    max-width: 846px;
-    min-height: 512px;
-    background-color: @color-white;
-    box-shadow: 0 0 2px 0 #888b8e;
-    margin: 48px auto auto;
+.wallet-page {
+  max-width: 846px;
+  min-height: 512px;
+  background-color: @color-white;
+  box-shadow: 0 0 2px 0 #888b8e;
+  margin: 48px auto auto;
+
+  @media (max-width: @screen-xs) {
+    margin: 0;
+    height: 100%;
+  }
+
+  .header {
+    height: 118px;
+    background-color: @color-main-purple;
+    color: @color-white;
+    padding: 24px 13px 0 15px;
+    margin-bottom: 11px;
 
     @media (max-width: @screen-xs) {
-        margin: 0;
-        height: 100%;
+      height: 96px;
+      padding: 16px 13px 0 11px;
     }
 
+    .header-title {
+      font-size: 32px;
+      line-height: 0.78;
+      letter-spacing: -0.8px;
+      margin-left: 18px;
+      @media (max-width: @screen-xs) {
+        font-size: 24px;
+        line-height: 1.04;
+        letter-spacing: -0.6px;
+        margin-left: 23px;
+      }
 
-    .header{
-        height: 118px;
-        background-color: @color-main-purple;
+    }
+
+    .back-button {
+      float: right;
+      width: 17px;
+      position: relative;
+      outline: none;
+      @media (max-width: @screen-xs) {
+      }
+      .icon {
         color: @color-white;
-        padding: 24px 13px 0 15px;
-        margin-bottom: 11px;
-
-        @media (max-width: @screen-xs) {
-            height: 96px;
-            padding: 16px 13px 0 11px;
-        }
-
-        .header-title{
-            font-size: 32px;
-            line-height: 0.78;
-            letter-spacing: -0.8px;
-            margin-left: 18px;
-            @media (max-width: @screen-xs) {
-                font-size: 24px;
-                line-height: 1.04;
-                letter-spacing: -0.6px;
-                margin-left: 23px;
-            }
-
-        }
-
-        .back-button {
-            float: right;
-            width: 17px;
-            position: relative;
-            outline: none;
-            @media (max-width: @screen-xs) {}
-            .icon {
-                color: @color-white;
-                font-size: 16px;
-            }
-        }
-
-    }
-
-
-    .tabs__bar{
-        height: 58px;
-        margin-top: 8px;
-        @media (max-width: @screen-xs) {
-            height: 54px;
-            margin-top: 0;}
-
-    }
-    .tabs:not(.tabs--centered):not(.tabs--grow):not(.tabs--mobile) .tabs__wrapper--scrollable,.tabs:not(.tabs--centered):not(.tabs--grow) .tabs__wrapper--scrollable{
-        margin: 0;
-
-        .tabs__item{
-            color: @color-white !important;
-            font-size: 16px;
-            letter-spacing: -0.2px;
-            text-transform: none;
-            padding: 0 19px;
-            &.tabs__item--active{
-                font-weight: bold;
-                letter-spacing: -0.3px;
-            }
-        }
-
-    }
-
-    .custom-table{
-        width: 100%;
         font-size: 16px;
-        // line-height: 1.56;
-        letter-spacing: -0.4px;
-        border: none;
-
-        thead{ background-color: #f3f3ff;}
-
-        .total,th{color: @color-main-purple; font-weight: normal;}
-        .number{ border-right: solid 2px @color-medium-grey; }
-
-        tr{height: 48px;}
-        td{ text-align: center; }
-        tr:nth-child(2n){background-color: @color-light-grey; }
-
-
-        &.balances{
-            td:nth-child(2){
-                text-align: left;
-                padding-left: 34px;
-                @media (max-width: @screen-xs) {padding-left: 16px;}
-             }
-            td:nth-child(4),th:nth-child(4){
-                text-align: right;
-                @media (max-width: @screen-xs) {padding-right: 22px;}
-            }
-
-            @media (max-width: @screen-xs) {
-                td:nth-child(1),th:nth-child(1),td:nth-child(5),th:nth-child(5){
-                    display: none;
-                }
-             }
-        }
-
-        &.transaction{
-            @media (max-width: @screen-xs) {
-                td:nth-child(1),th:nth-child(1),td:nth-child(4),th:nth-child(4),td:nth-child(6),th:nth-child(6){
-                    display: none;
-                }
-             }
-        }
-
-
+      }
     }
 
-    .cash-out,.cash-out-big{
-        width: 88px;
-        height: 24px;
-        border-radius: 4px;
-        background-color: #d0021b;
-        color: @color-white;
-        font-size: 14px;
+  }
+
+  .tabs__bar {
+    height: 58px;
+    margin-top: 8px;
+    @media (max-width: @screen-xs) {
+      height: 54px;
+      margin-top: 0;
+    }
+
+  }
+  .tabs:not(.tabs--centered):not(.tabs--grow):not(.tabs--mobile) .tabs__wrapper--scrollable, .tabs:not(.tabs--centered):not(.tabs--grow) .tabs__wrapper--scrollable {
+    margin: 0;
+
+    .tabs__item {
+      color: @color-white !important;
+      font-size: 16px;
+      letter-spacing: -0.2px;
+      text-transform: none;
+      padding: 0 19px;
+      &.tabs__item--active {
         font-weight: bold;
-        outline: none;
-        letter-spacing: -0.2px;
-        margin-right: 12px;
+        letter-spacing: -0.3px;
+      }
     }
 
+  }
 
-    .bottom-btn{
+  .custom-table {
+    width: 100%;
+    font-size: 16px;
+    // line-height: 1.56;
+    letter-spacing: -0.4px;
+    border: none;
 
-        padding: 16px 17px;
-        position: fixed;
-        bottom: 0;
+    thead {
+      background-color: #f3f3ff;
+    }
+
+    .total, th {
+      color: @color-main-purple;
+      font-weight: normal;
+    }
+    .number {
+      border-right: solid 2px @color-medium-grey;
+    }
+
+    tr {
+      height: 48px;
+    }
+    td {
+      text-align: center;
+    }
+    tr:nth-child(2n) {
+      background-color: @color-light-grey;
+    }
+
+    &.balances {
+      td:nth-child(2) {
+        text-align: left;
+        padding-left: 34px;
+        @media (max-width: @screen-xs) {
+          padding-left: 16px;
+        }
+      }
+      td:nth-child(4), th:nth-child(4) {
+        text-align: right;
+        @media (max-width: @screen-xs) {
+          padding-right: 22px;
+        }
+      }
+
+      @media (max-width: @screen-xs) {
+        td:nth-child(1), th:nth-child(1), td:nth-child(5), th:nth-child(5) {
+          display: none;
+        }
+      }
+    }
+
+    &.transaction {
+      @media (max-width: @screen-xs) {
+        td:nth-child(1), th:nth-child(1), td:nth-child(4), th:nth-child(4), td:nth-child(6), th:nth-child(6) {
+          display: none;
+        }
+      }
+    }
+
+  }
+  .wallet-table {
+    height: 344px;
+    .table {
+      thead {
+        background-color: #f3f3ff;
+        tr {
+          border: none;
+        }
+      }
+      th {
+        &:focus {
+          outline: none;
+        }
+        i {
+          display: none !important;
+        }
+
+        .table-header {
+          font-size: 16px;
+          line-height: 1.56;
+          letter-spacing: -0.4px;
+          color: #3532d5;
+        }
+      }
+      td:last-child, th:last-child {
+        padding-right: 80px !important;
+      }
+      @media (max-width: @screen-xs) {
+        td:first-child, th:first-child {
+          padding-right: 15vw;
+        }
+      }
+      tbody {
+        td {
+          font-size: 16px;
+          line-height: 1.56;
+          letter-spacing: -0.4px;
+          color: #000000;
+        }
+        tr {
+          border: none;
+          &:nth-child(2n) {
+            background-color: #f0f0f0;
+          }
+          &:hover {
+            background: #d7d7ff;
+          }
+        }
+      }
+    }
+  }
+
+  .bold, .Balance-header, .Value-header {
+    font-weight: bold;
+  }
+
+  .balance-table .table tbody tr:last-child {
+    border-top: solid 1px #3532d5;
+    td {
+      color: #3532d5;
+      font-weight: bold;
+    }
+  }
+  .cash-out, .cash-out-big {
+    width: 88px;
+    height: 24px;
+    border-radius: 4px;
+    background-color: #d0021b;
+    color: @color-white;
+    font-size: 14px;
+    font-weight: bold;
+    outline: none;
+    letter-spacing: -0.2px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .bottom-btn {
+
+    padding: 16px 17px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+    .cash-out-big {
+      display: none;
+      height: 48px;
+      @media (max-width: @screen-xs) {
+        font-size: 18px;
+        line-height: 1.39;
+        letter-spacing: -0.5px;
+        display: block;
+        margin: 0;
         width: 100%;
-
-        .cash-out-big{
-            display: none;
-            height: 48px;
-            @media (max-width: @screen-xs) {
-                font-size: 18px;
-                line-height: 1.39;
-                letter-spacing: -0.5px;
-                display: block;
-                margin: 0;
-                width: 100%;
-            }
-        }
-
+      }
     }
 
+  }
 
-
-    .pagination{
-        i.sbf{
-            font-size: 17px;
-            color: @color-main-purple;
-            &.left{ transform: scale(-1,1);}
-        }
-        .pagination__item,.pagination__navigation, .pagination__item--active.primary{
-            background: none!important;
-            border: none;
-            box-shadow: none;
-            width: auto;
-            height: auto;
-            line-height: 1.79;
-            font-size: 14px;
-            letter-spacing: -0.4px;
-            color: #000000;
-            outline: none;
-        }
-        .pagination__navigation{margin: 0 17px;}
-        .pagination__item--active.primary{
-            color: #000000;
-            font-weight: bold;
-
-        }
+  .pagination {
+    i.sbf {
+      font-size: 17px;
+      color: @color-main-purple;
+      &.left {
+        transform: scale(-1, 1);
+      }
     }
+    .pagination__item, .pagination__navigation, .pagination__item--active.primary {
+      background: none !important;
+      border: none;
+      box-shadow: none;
+      width: auto;
+      height: auto;
+      line-height: 1.79;
+      font-size: 14px;
+      letter-spacing: -0.4px;
+      color: #000000;
+      outline: none;
+    }
+    .pagination__navigation {
+      margin: 0 17px;
+    }
+    .pagination__item--active.primary {
+      color: #000000;
+      font-weight: bold;
+
+    }
+  }
 
 }
 
