--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -122,9 +122,70 @@
              }
         }
 
+  }
+  .wallet-table {
+    height: 344px;
+    .table {
+      thead {
+        background-color: #f3f3ff;
+        tr {
+          border: none;
+        }
+      }
+      th {
+        &:focus {
+          outline: none;
+        }
+        i {
+          display: none !important;
+        }
 
+        .table-header {
+          font-size: 16px;
+          line-height: 1.56;
+          letter-spacing: -0.4px;
+          color: #3532d5;
+        }
+      }
+      td:last-child, th:last-child {
+        padding-right: 80px !important;
+      }
+      @media (max-width: @screen-xs) {
+        td:first-child, th:first-child {
+          padding-right: 15vw;
+        }
+      }
+      tbody {
+        td {
+          font-size: 16px;
+          line-height: 1.56;
+          letter-spacing: -0.4px;
+          color: #000000;
+        }
+        tr {
+          border: none;
+          &:nth-child(2n) {
+            background-color: #f0f0f0;
+          }
+          &:hover {
+            background: #d7d7ff;
+          }
+        }
+      }
+    }
+  }
+
+  .bold, .Balance-header, .Value-header {
+    font-weight: bold;
     }
 
+  .balance-table .table tbody tr:last-child {
+    border-top: solid 1px #3532d5;
+    td {
+      color: #3532d5;
+      font-weight: bold;
+    }
+  }
     .cash-out,.cash-out-big{
         width: 88px;
         height: 24px;
@@ -135,7 +196,8 @@
         font-weight: bold;
         outline: none;
         letter-spacing: -0.2px;
-        margin-right: 12px;
+    display: block;
+    margin: 0 auto;
     }
 
 
