--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -16,7 +16,7 @@
 
   .q-price {
     height: 41px;
-    width: 105px;
+    //width: 105px;
     overflow: hidden;
     border-radius:4px 0 36px;
     background-color: #f0f0f0;
@@ -27,7 +27,7 @@
 
     color: #47586a;
     text-align: center;
-    padding-right: 15px;
+    padding-right: 20px;
     display: inline-block;
 
     span {
