--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -115,6 +115,7 @@
 
   .q-text {
     line-height: 1.75;
+    word-wrap: break-word;
     letter-spacing: -0.3px;
     text-align: left;
     color: #4a4a4a;
