few header fixes

--- a/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
+++ b/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   align-items: flex-end;
-  padding-bottom: 39px;
+  .responsive-property(padding-bottom, 39px, null, 24px);
   justify-content: flex-start;
   background-size: auto;
   background: url(./img/1920.png) center no-repeat ;
