--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -281,6 +281,30 @@
     }
   }
 
+  .cash-out-wrapper {
+    text-align: center;
+    padding: 0 8px;
+    .responsive-property(margin-top, 22px, null, 16px);
+    padding-bottom: 32px;
+    .text-wrap {
+      .responsive-property(margin-bottom, 32px, null, 24px);
+      .responsive-property(font-size, 24px, null, 20px);
+      color: #4a4a4a;
+      letter-spacing: -0.7px;
+      text-align: center;
+      .main-text {
+        font-weight: bold;
+      }
+      .points-text span {
+        font-weight: bold;
+        color: #3532d5;
+      }
+    }
+    .cash-out-option {
+      margin-bottom: 8px;
+    }
+  }
+
   .cash-out {
     width: 456px;
     margin-left: auto;
