--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -2,11 +2,18 @@
 
   .registration-dialog {
     text-align: center;
+    @media (max-width: @screen-xs) {
+      margin: 16px;
+    }
+
     .card {
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 392px;
+      @media (max-width: @screen-xs) {
+        min-height: 363px;
+      }
 
       .close-btn {
         position: absolute;
@@ -47,6 +54,7 @@
     .input-wrapper {
       position: relative;
       margin-top: 30px;
+
       input {
         margin-top: 0;
         padding-left: 52px;
@@ -85,6 +93,20 @@
       width: 100%;
       margin: 0 auto;
       padding: 32px 0;
+      .custom{
+        padding: 40px 0 47px;
+        height: 393px;
+        @media (max-width: @screen-xs) {
+          padding: 52px 16px 10px;
+          height: 363px;
+        }
+        p{
+          margin-top: 0;
+          @media (max-width: @screen-xs) {
+            margin: 0 16px;
+          }
+        }
+      }
     }
 
   }
