--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -136,10 +136,33 @@
   }
 
   .points-list{
-    list-style-type: none;
-    li{
-      min-width: 72px;
-      max-width: 82px;
+    display: flex;
+    @media(max-width: @screen-xs){
+      flex-direction: column;
+    }
+    //list-style-type: none;
+    .points-line{
+      display: flex;
+      flex-grow: 1;
+      margin-bottom: 16px;
+      &:first-child .point-btn{
+        flex-grow: 1;
+      }
+
+      &:last-child{
+        @media(min-width: @screen-xs) {
+          max-width: 320px;
+        }
+      }
+      .point-btn:last-child{
+        @media(max-width: @screen-xs) {
+          margin-right: 0;
+        }
+      }
+    }
+    .point-btn{
+      //width: 100%;
+      //max-width: 82px;
       //line-height: 46px;
       float: left;
       margin-right: 8px;
@@ -147,6 +170,15 @@
       letter-spacing: -0.5px;
       text-align: center;
       color: #888b8e;
+
+      &.pts-5{
+        max-width: 72px;
+      }
+      &.pts-35 {
+        //@media(max-width: @screen-xs) {
+          width: 40%;
+        //}
+      }
 
       input[type="radio"]{
         display: none;
@@ -203,17 +235,17 @@
         }
       }
 
-      @media (max-width: @screen-xs) {
-        min-width: 112px;
-        max-width: 152px;
-        margin-top: 16px;
-        &.pts-10{width: 114px;}
-        &.pts-20{width: 129px;}
-        &.pts-35{width: 145px;}
-        &.other{width: 224px; }
-      }
+      //@media (max-width: @screen-xs) {
+      //  min-width: 112px;
+      //  max-width: 152px;
+      //  margin-top: 16px;
+      //  &.pts-10{width: 114px;}
+      //  &.pts-20{width: 129px;}
+      //  &.pts-35{width: 145px;}
+      //  &.other{width: 224px; }
+      //}
     }
-    li, input {
+    .point-btn, input {
       border-radius: 4px;
       border: solid 1px #979797;
     }
