Fixed image gallery design

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -123,7 +123,7 @@
 
 
     .gallery{
-        background-color: @color-light-grey;
+        //background-color: @color-light-grey;
         padding: 16px;
         margin: 16px;
         .carousel{
@@ -134,8 +134,8 @@
             .carousel__left{left: 9px;i.sbf{margin-right: 3px;}}
             .carousel__right{right: 9px; i.sbf{margin-left: 4px;}}
             button{
-                width: 32px;
-                height: 32px;
+                width: 40px;
+                height: 40px;
                 .btn__content:before{
                     opacity: 0.2;
                     background-color: #000000;
@@ -148,7 +148,9 @@
                 }
 
             }
-
+          .carousel__item{
+            background-size: contain;
+          }
         }
     }
 
