fix profile data manipulation

--- a/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
+++ b/Cloudents.Web/ClientApp/components/SortAndFilter/MobileSortAndFilter.less
@@ -1,6 +1,7 @@
 @import "../../mixin.less";
 .filter-dialog {
     padding-bottom: 60px;
+    margin:0;
     .apply {
         bottom: 12px;
         left: 8px;
