--- a/Cloudents.Web/ClientApp/components/profile/profile.less
+++ b/Cloudents.Web/ClientApp/components/profile/profile.less
@@ -129,6 +129,51 @@
     }
 
 
+    .empty-state{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        border-radius: 4px;
+        background-color: @color-white;
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+        margin-bottom: 16px;
+        .responsive-property(height, 280px, null, 248px);
+        .text-block{
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            font-weight: 300;
+            margin-bottom: 0;
+            .responsive-property(padding-top, 4px, null, 0);
+            p,b{
+                line-height: 0.9;
+                letter-spacing: -0.3px;
+                color: @color-grey;
+                .responsive-property(font-size, 40px, null, 30px);
+                font-size: 40px;
+                .responsive-property(line-height, 1, null, 1.2);
+                margin-bottom: 0;
+            }
+            b{
+                font-weight: bold;
+            }
+        }
+        a{
+            display: inline-block;
+            line-height: 40px;
+            min-width: 208px;
+            margin: 0 auto;
+            background: @color-dark-blue;
+            color: @color-white;
+            font-size: 20px;
+            font-weight: bold;
+            letter-spacing: -0.5px;
+            border-radius: 4px;
+            margin-bottom: 24px;
+        }
+    }
 }
 
 
