small fix in login banner

--- a/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
+++ b/Cloudents.Web/ClientApp/components/helpers/signup-banner/signup-banner.less
@@ -23,12 +23,14 @@
 
   .back-button {
     position: absolute;
-    top: 16px;
-    right: 16px;
-    width: 20px;
-    height: 20px;
+    top: 8px;
+    right: 8px;
+    width: 36px;
+    height: 36px;
+    padding: 8px;
     @media (max-width: @screen-xs) {
-      margin: 9px 5px;
+      top: 2px ;
+      right: 2px;
     }
     .sbf {
       font-size: 16px;
