--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -291,7 +291,7 @@
   }
 }
 
-.overlay.overlay--active:before {
+#app > .overlay.overlay--active:before {
   background-color: #3532d5;
   opacity: 0.76;
 }
