--- a/Cloudents.Web/ClientApp/components/helpers/menu-list/menu-list.less
+++ b/Cloudents.Web/ClientApp/components/helpers/menu-list/menu-list.less
@@ -1,6 +1,14 @@
 @import "../../../mixin.less";
-
 .menu-list{
+    .unsign .Mask {
+        width: 64px;
+        height: 64px;
+        background-color: #9b9b9b;
+    }
+    .blue--text{
+        font-size: 14px;
+        color: #3532d5!important;
+    }
     width: 280px;
     padding: 14px 0 18px;
 
