changed not logged in popup to a toaster

--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -27,7 +27,7 @@
 
     color: #47586a;
     text-align: center;
-    padding-right: 20px;
+    padding-right: 26px;
     display: inline-block;
 
     span {
@@ -119,6 +119,7 @@
     letter-spacing: -0.3px;
     text-align: left;
     color: #4a4a4a;
+    white-space: pre;
   }
 
 
@@ -181,7 +182,7 @@
     }
     .files {
       width: 30px;
-      margin-right: 19px;
+      margin-right: 16px;
       height: 32px;
       display: flex;
       flex-direction: row;
