--- a/Cloudents.Web/ClientApp/components/registration/registration.less
+++ b/Cloudents.Web/ClientApp/components/registration/registration.less
@@ -141,6 +141,7 @@
       display: flex;
       flex-grow: 1;
       width: 100%;
+      position: relative;
 
       &.image {
         @media (max-width: @screen-xs) {
@@ -152,6 +153,12 @@
         @media (max-width: @screen-xs) {
           padding: 16px 14px 16px 16px;
         }
+      }
+      .bottom-text{
+        position: absolute;
+        .responsive-property(bottom, 120px, null, 54px);
+        left: 0;
+        right: 0;
       }
     }
 
