fix small ui in profile page mobile

--- a/Cloudents.Web/ClientApp/components/profile/profile.less
+++ b/Cloudents.Web/ClientApp/components/profile/profile.less
@@ -124,7 +124,7 @@
 
 
     .column{
-        .user-block{height: 170px;}
+        .main-block .user-block{height: 170px;}
         .web-content{ margin: 16px 8px;}
     }
 
