--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -146,6 +146,8 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     position:absolute;
 }
 
-
+.application--wrap{
+    overflow-x: hidden; // FOR FIXING BUG 10327 - AN HACK FOR SAFARI :\
+}
 
 
