--- a/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
+++ b/Cloudents.Web/ClientApp/components/question/helpers/question-card/question-card.less
@@ -119,7 +119,7 @@
     letter-spacing: -0.3px;
     text-align: left;
     color: #4a4a4a;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
 
