--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -127,7 +127,7 @@
     position: relative;
     .error-message {
       position: absolute;
-      top: -32px;
+      .responsive-property(top, -32px, null, -16px);
       left: 0;
       right: 0;
       text-align: center;
